BUG#16370: Default subpartitioning not properly handled in conjunction with ALTER TABLE ADD/REORGANIZE PARTITION Ensure that default subpartitioning is removed when subpartitions are defined in ADD/REORGANIZE PARTITION